--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "cypress": "^11.0.1",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.21",
